--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,10 @@ html {
     html {
       font-size: 56.25%;
       /* 1rem = 9px; 9px/16px = 56.25%  */ } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%;
+      /* 1rem = 8px; 8px/16px = 50%  */ } }
   @media (min-width: 112.5em) {
     html {
       font-size: 75%;
@@ -122,6 +126,20 @@ body {
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
+/* width */
+::-webkit-scrollbar {
+  width: 0px; }
+
+/* Track */
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #009999;
+  border-radius: 10px; }
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #008080; }
+
 body {
   /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
   font-family: "Lato", sans-serif;
@@ -131,21 +149,28 @@ body {
   color: #777; }
 
 .heading-primary {
-  color: #009999;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden; }
+  color: #009999; }
   .heading-primary--main {
     display: block;
-    font-size: 2.2rem;
+    font-size: 1.85rem;
     /*
         animation-delay: 3s;
         animation-iteration-count: 3;
         */ }
+    @media (max-width: 87.5em) {
+      .heading-primary--main {
+        font-size: 1.8rem; } }
+    @media (max-width: 84.375em) {
+      .heading-primary--main {
+        font-size: 1.7rem; } }
+    @media (max-width: 81.25em) {
+      .heading-primary--main {
+        font-size: 1.55rem; } }
+    @media (max-width: 68.75em) {
+      .heading-primary--main {
+        font-size: 1.85rem; } }
   .heading-primary--sub {
-    text-align: right;
-    display: block;
-    font-size: 2.6rem;
-    margin-top: -1rem; }
+    font-size: 2.2rem; }
 
 .emphasize {
   font-style: italic; }
@@ -1058,21 +1083,32 @@ table {
         width: 100%; } }
 
 .header {
-  /* background-image: url(../img/hero.jpg); */ }
+  padding: 5%; }
+  @media (max-width: 68.75em) {
+    .header {
+      padding-bottom: 0; } }
   .header::after {
     content: "";
     display: table;
     clear: both; }
   .header__logo-box {
+    text-align: center;
     float: left;
-    margin-top: 4rem;
-    margin-left: 2rem; }
+    margin-left: 2%; }
+    @media (max-width: 68.75em) {
+      .header__logo-box {
+        float: none; } }
   .header__logo {
     height: 12rem; }
+    @media (max-width: 68.75em) {
+      .header__logo {
+        height: 12.5rem; } }
   .header__text-box {
-    float: right;
-    margin-top: 6rem;
-    margin-right: .5rem; }
+    text-align: center;
+    margin-top: 2.5rem; }
+    @media (max-width: 68.75em) {
+      .header__text-box {
+        margin-top: .5rem; } }
 
 .navigation__list {
   list-style: none;
