--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -74,9 +74,22 @@ ORDER TO DO MEDIA QUERIES: Base + Tyography > General Layout > Grid > Page Layou
     @if $breakpoint == tab-port {
         @media (max-width: 56.25em) { @content}; //900px
     }
+    @if $breakpoint == tab-port2 {
+        @media (max-width: 68.75em) { @content}; //1100px
+    }
     @if $breakpoint == tab-land {
         @media (max-width: 75em) { @content}; //1200px
     }
+    @if $breakpoint == desktop {
+        @media (max-width: 81.25em) { @content}; //1300px
+    }
+    @if $breakpoint == desktop1 {
+        @media (max-width: 84.375em) { @content}; //1350px
+    }
+    @if $breakpoint == desktop2 {
+        @media (max-width: 87.5em) { @content}; //1400px
+    }
+
     @if $breakpoint == big-desktop {
         @media (min-width: 112.5em) { @content}; //1800px
     }
