--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -24,7 +24,7 @@ html {
     }
 
     @include respond(tab-port){ //this asks is width < 900?
-      // font-size: 50%; /* 1rem = 8px; 8px/16px = 50%  */
+      font-size: 50%; /* 1rem = 8px; 8px/16px = 50%  */
       // font-size: 62.5%; //10px/16px
     }
 
@@ -45,4 +45,26 @@ html {
 body {
     height: 100%;
     box-sizing: border-box;
+}
+/* width */
+::-webkit-scrollbar {
+  width: 0px;
+  // width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  // box-shadow: inset 0 0 5px grey;
+  // border-radius: 1px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $color-teal;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: $teal-color;
 }
