--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,32 +1,38 @@
+#side-navigation {
+
+}
+
 .header {
-    //height: 95vh;
-    // height: 100vh;
-    /* background-image: url(../img/hero.jpg); */
-    // background-image: linear-gradient(
-    //     to right bottom,
-    //     rgba($color-primary-light, 0.801),
-    //     rgba($color-primary-dark, 0.801)),
-    // url(../img/hero.jpg);
-    // background-size: cover;
-    // background-position: top;
-    // position: relative;
+  padding: 5%;
+  // width: 40rem;
+  @include respond(tab-port2){ //this asks is width < 1100?
+    padding-bottom: 0;
+  }
+
     @include clearfix;
 
     &__logo-box {
-
+      text-align: center;
 
         // position: absolute;
         // top: 4rem;
         // left: 4rem;
         float: left;
-        margin-top: 4rem;
-        margin-left: 2rem;
+        margin-left: 2%;
+        // margin-top: 4rem;
+        // margin-left: 2rem;
+        @include respond(tab-port2){ //this asks is width < 1100?
+          float: none;
+        }
     }
-
 
     &__logo {
         // height: 3.5rem;
         height: 12rem;
+
+        @include respond(tab-port2){ //this asks is width < 1100?
+          height: 12.5rem;
+        }
     }
 
     &__text-box {
@@ -35,14 +41,17 @@
         // left: 50%;
         // /* background-color: red; */
         // transform: translate(-50%, -50%);
-        // text-align: center;
+        text-align: center;
 
         // position: absolute;
         // top: 4rem;
         // right: 4rem;
 
-        float: right;
-        margin-top: 6rem;
-        margin-right: .5rem;
+        // float: right;
+        margin-top: 2.5rem;
+        // margin-right: .5rem;
+        @include respond(tab-port2){ //this asks is width < 1100?
+            margin-top: .5rem;
+        }
     }
 }
