--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -111,6 +111,11 @@
         padding-bottom: 6rem;
         // overflow-y: scroll;
     //    overflow-x: hidden;
+
+  // @include clearfix;
+
+
+
     @include respond(tab-port){
         display: none;
     }
@@ -119,11 +124,13 @@
     .col-3-of-3 {
         width: calc( 2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal} );
         // background-color: #9b1919;
-        float: left;
+        // float: left; ...it was taken out later...
         // position: fixed;
         // margin-left: calc( (100% - 2 * #{$gutter-horizontal}) / 3 + #{$gutter-horizontal} );
         overflow: scroll;
         max-height: 100%;
+
+          // @include clearfix;
 
         @include respond(tab-port){
           width: 100%;
