--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,8 @@ html {
   @media (min-width: 112.5em) {
     html {
       font-size: 75%;
-      /* 1rem = 12px; 12px/16px = 75%  */ } }
+      /* 1rem = 12px; 12px/16px = 75%  */
+      font-size: 90%; } }
 
 body {
   height: 100%;
@@ -1495,7 +1496,10 @@ table {
       height: 70vh; } }
   @media (max-width: 68.75em) {
     .section-content {
-      height: 40vh; } }
+      height: 35vh; } }
+  @media (max-width: 62.5em) {
+    .section-content {
+      height: 50vh; } }
   @media (max-width: 37.5em) {
     .section-content {
       height: 55vh; } }
@@ -1509,6 +1513,9 @@ table {
     .section-content {
       height: 65vh; } }
   @media (max-width: 25em) {
+    .section-content {
+      height: 90vh; } }
+  @media (max-width: 23.4375em) {
     .section-content {
       height: 100vh; } }
   @media (max-width: 21.875em) {
