--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -42,6 +42,7 @@ html {
     @include respond(big-desktop){
       font-size: 75%; /* 1rem = 12px; 12px/16px = 75%  */
       // font-size: 100%;
+      font-size: 90%;
     }
 }
 
